@startuml

title __DOCKERIZEDJAVAAPI's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    class com.soundlab.dockerizedjavaapi.DockerizedJavaApiApplication {
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.AdminController {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.CandidatoController {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.EmpresaController {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.VagaController {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.SignInViewController {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      abstract class com.soundlab.dockerizedjavaapi.core.AuditableEntity {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      enum Level {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.resposta {
        class com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.resposta {
        class com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Admin {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Candidato {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Empresa {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.User {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        enum UserType {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        class com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        class com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        enum VagaStatus {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace view.signin {
        class com.soundlab.dockerizedjavaapi.core.view.signin.SignInViewRequestAuth {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace view.signin {
        class com.soundlab.dockerizedjavaapi.core.view.signin.SignInViewResponseContent {
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace exceptions {
      class com.soundlab.dockerizedjavaapi.exceptions.Advices {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace exceptions {
      class com.soundlab.dockerizedjavaapi.exceptions.InvalidCredentialsException {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace exceptions {
      class com.soundlab.dockerizedjavaapi.exceptions.InvalidDateTimeFormatAdvice {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace exceptions {
      class com.soundlab.dockerizedjavaapi.exceptions.InvalidDateTimeFormatException {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace exceptions {
      class com.soundlab.dockerizedjavaapi.exceptions.UserNotFoundException {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace repositories {
      interface com.soundlab.dockerizedjavaapi.repositories.AdminRepository {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace repositories {
      interface com.soundlab.dockerizedjavaapi.repositories.CandidatoRepository {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace repositories {
      interface com.soundlab.dockerizedjavaapi.repositories.EmpresaRepository {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace repositories {
      interface com.soundlab.dockerizedjavaapi.repositories.UserRepository {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace repositories {
      interface com.soundlab.dockerizedjavaapi.repositories.VagaRepository {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
      class com.soundlab.dockerizedjavaapi.services.domain.AdminService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
      class com.soundlab.dockerizedjavaapi.services.domain.CandidatoService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
      class com.soundlab.dockerizedjavaapi.services.domain.EmpresaService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
      abstract class com.soundlab.dockerizedjavaapi.services.domain.GenericService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
      class com.soundlab.dockerizedjavaapi.services.domain.UserService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
      class com.soundlab.dockerizedjavaapi.services.domain.VagaService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
      interface com.soundlab.dockerizedjavaapi.services.view.ViewService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
      class com.soundlab.dockerizedjavaapi.services.view.SignInViewService {
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace utils {
      abstract class com.soundlab.dockerizedjavaapi.services.utils.StringResourcesService {
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.controllers.domain.AdminController o-- com.soundlab.dockerizedjavaapi.services.domain.AdminService : adminService
  com.soundlab.dockerizedjavaapi.controllers.domain.CandidatoController o-- com.soundlab.dockerizedjavaapi.services.domain.CandidatoService : candidatoService
  com.soundlab.dockerizedjavaapi.controllers.domain.EmpresaController o-- com.soundlab.dockerizedjavaapi.services.domain.EmpresaService : empresaService
  com.soundlab.dockerizedjavaapi.controllers.domain.VagaController o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService
  com.soundlab.dockerizedjavaapi.controllers.view.SignInViewController o-- com.soundlab.dockerizedjavaapi.services.view.SignInViewService : signInViewService
  com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio o-- com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio : vagaCriterio
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : level
  com.soundlab.dockerizedjavaapi.core.domain.user.Admin -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.Candidato -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.Empresa -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.User -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.user.User o-- com.soundlab.dockerizedjavaapi.core.domain.user.UserType : userType
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : pmd
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : weight
  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga o-- com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaStatus : status
  com.soundlab.dockerizedjavaapi.services.domain.AdminService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.CandidatoService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.EmpresaService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.GenericService o-- T : repository
  com.soundlab.dockerizedjavaapi.services.domain.UserService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.VagaService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.view.SignInViewService .up.|> com.soundlab.dockerizedjavaapi.services.view.ViewService
  com.soundlab.dockerizedjavaapi.services.view.SignInViewService o-- com.soundlab.dockerizedjavaapi.services.domain.UserService : userService
  com.soundlab.dockerizedjavaapi.services.view.SignInViewService o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
